<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">learning</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Click_Me">Click Me</string>
    <string name="Start">"StartRadio"</string>
    <string name="exit">退出</string>
    <string name="abort">关于</string>
    <string name="call_other">调起其他</string>
    <string name="send">发送短信</string>
    <string name="radio">RadioAndCheckBox</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="swim">游泳</string>
    <string name="run">跑步</string>
    <string name="read">读书</string>
    <string name="listviewLinearLayout">listviewLinearLayout</string>
    <string name="list">list</string>
    <string name="StartHandler">Start</string>
    <string name="EndHandler">EndHandler</string>
    

</resources>
